--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -182,7 +182,7 @@
 		</div><!-- end section -->
 
 		<!-- ADD Modal -->
-<div class="modal fade" id="addCourse" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+		<div class="modal fade" id="addCourse" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
 	<div class="modal-dialog modal-dialog-centered modal-lg" role="document">
 		<div class="modal-content">
 			<div class="modal-body customer-box">
@@ -226,8 +226,60 @@
 			</div>
 		</div>
 	</div>
-</div>
-		<% } %>
+		</div>
+	<% } %>
+
+	<% if(user.role ==='admin') { %> 
+
+		<div class="all-title-box">
+			<div class="container text-center">
+				<h1><%= user.name %><span class="m_1">ADMIN</span></h1>
+			</div>
+		</div>
+	
+		<div id="overviews" class="section wb">
+			<div class="container">
+				<div class="row"> 
+					<div class="col-lg-12 blog-post-single">					
+						<div class="blog-author">
+							<div class="author-bio">
+								<h3 class="author_name"><a href="#">Courses Enroll by: <%= user.name %></a></h3>
+							</div>
+	
+						</div>
+						
+					</div><!-- end col -->
+				</div><!-- end row -->
+				<div class="row mt-5"> 
+					
+					<table class="table">
+						<thead>
+						  <tr>
+							<th scope="col">ID#</th>
+							<th scope="col">Email</th>
+							<th scope="col">Role</th>
+							<th scope="col">Delete</th>
+						  </tr>
+						</thead>
+						<tbody>
+					<% for (let i=0; i< users.length; i++) { %>
+						  <tr>
+							<th scope="row"><%=users[i]._id %></th>
+							<td><%=users[i].email %></td>
+							<td><%=users[i].role %></td>
+							<td><a href="/users/<%= users[i]._id %>?_method=DELETE" 
+								onclick="return confirm('ARE YOU SURE')"
+								class="btn btn-danger rounded-0 text-white"><span>DELETE</span></a></td>
+						  </tr>
+					<% } %>
+						</tbody>
+					  </table>
+
+				</div><!-- end row -->
+			</div><!-- end container -->
+		</div><!-- end section -->
+	
+	<% } %>
 
 <% } %>
 
